syntax = "proto3";

// package = service;
option go_package = "github.com/jason90929/grpc-go-hello-world/protos";

message EchoRequest {
  string Req = 1;
}

message EchoResponse {
  string Res = 1;
}

service EchoService {
  rpc GetUnaryEcho(EchoRequest) returns (EchoResponse);
}
